start reworking plot generation with database rework